kustomize/jenkins/overlays/oci/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
